// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Promise.all should not import polyfill more than once 1`] = `
"import _Promise_all from \\"babel-plugin-transform-polyfills/polyfills/Promise/all\\";

const e = _Promise_all([_Promise_all([1, 2])]);"
`;

exports[`Promise.all should replace Promise.all with a polyfill 1`] = `
"import _Promise_all from \\"babel-plugin-transform-polyfills/polyfills/Promise/all\\";

const c = _Promise_all([]);"
`;

exports[`Promise.all should work when part of a call chain 1`] = `
"import _Promise_all from \\"babel-plugin-transform-polyfills/polyfills/Promise/all\\";

const c = Object.keys(_Promise_all([]));"
`;
